# WindowsBlockCache

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  loader.cpp
cmake/: compile_options.cmake  export_headers.cmake  install.cmake
include/block_cache/: file_handler.hpp  mru_policy.hpp
src/: CMakeLists.txt
src/block_cache/: file_handler.cpp  mru_policy.cpp
